# agent-alert-monitor

./: .env.example  .gitignore  README.md  config.example.yaml  pyproject.toml
docs/: architecture.md  kanban-flow.md  message-templates.md  operations.md
scripts/: install.sh  setup-aws-readonly.sh  setup-interactive.sh  systemd-install.sh
src/agent_alert_monitor/: __init__.py  alert.py  cli.py  cloud_parsers.py  config.py  coordinator.py  health.py  incident_cards.py  kanban.py  ledger.py  lifecycle.py  message_templates.py  setup_wizard.py  sqs_ingest.py  telegram_ingest.py  telegram_status.py  watchdog.py
systemd/: agent-alert-monitor-health.service  agent-alert-monitor-health.timer  agent-alert-monitor-ingest.service  agent-alert-monitor-sqs-listen.service  agent-alert-monitor-sqs-readiness.service  agent-alert-monitor-watchdog.service  agent-alert-monitor-watchdog.timer
tests/: test_alert_envelope_parsers.py  test_cli.py  test_cloud_alert_model.py  test_config.py  test_config_v2.py  test_correlation.py  test_health_and_dlq.py  test_incident_cards.py  test_kanban_cli_client.py  test_ledger.py  test_ledger_v2.py  test_lifecycle_sync.py  test_message_templates.py  test_operations_docs.py  test_setup_wizard.py  test_sqs_ingest.py  test_telegram_ingest.py  test_telegram_status.py  test_watchdog.py
tests/fixtures/: aws_eventbridge_cloudwatch_alarm_alarm.json  aws_eventbridge_cloudwatch_alarm_ok.json  aws_sns_cloudwatch_alarm_alarm.json  aws_sns_cloudwatch_alarm_ok.json  aws_sqs_receive_message_eventbridge_envelope.json  aws_sqs_receive_message_sns_envelope.json
